--- a/css/gouge.css
+++ b/css/gouge.css
@@ -1,100 +1,95 @@
-$(function(){
-	//当js_number被选中
-	var lj_number1="0";
-	
-	//数字操作
-	$(".js_number").click(function(){
-//		console.log(this.innerText)
-		//将数值打印到显示框
-		if(lj_number1==="0"){
-			lj_number1=this.innerText;
-		}else{
-			lj_number1+=this.innerText;
-		}
-		$(".content").text(lj_number1);
-	})
-	
-	//为零操作
-	$(".weiling").click(function(){
-		$(".content").text(0);
-		lj_number1="0";
-	})
-	
-	//一般运算操作
-	$(".yiban").click(function(){
-		//将值转化为number
-//		console.log(this.innerText);
-		if(lj_number1[lj_number1.length-1]=="+"||lj_number1[lj_number1.length-1]=="*"||lj_number1[lj_number1.length-1]=="-"||lj_number1[lj_number1.length-1]=="/"){
-			//替换掉最后一位
-			lj_number1=lj_number1.substring(0,lj_number1.length-1)+this.innerText;
-			$(".content").text(lj_number1);			
-//			return false;
-		}else{
-			lj_number1+=this.innerText;
-			$(".content").text(lj_number1);	
-		}
-//		console.log(lj_number1[lj_number1.length-2]);
-	})
-	
+* {
+	margin: 0;
+	padding: 0;
+}
+body{
+	overflow: hidden;
+}
+h2 {
+	text-align: center;
+	margin-top: 30px;
+	font-size: 30px;
+	letter-spacing: 5px;
+	transition: 1s;
+	cursor: pointer;
+	color: #62c5ee;
+}
+h2:hover{
+	letter-spacing: 10px;
+	transform: scale(1.3);
+}
+.box {
+	width: 400px;
+	height: 610px;
+	border: 1px solid #ccc;
+	margin: 30px auto;
+	padding: 0;
+	overflow: hidden;
+	font-size: 30px;
+	font-weight: bold;
+	position: relative;
+	border-radius: 15px;
+}
 
-	//dian运算操作
-	$(".dian").click(function(){
-		//将值转化为number
-//		console.log(this.innerText);
-//		console.log(lj_number1.indexOf("."));
-		if(lj_number1[lj_number1.length-1]=="+"||lj_number1[lj_number1.length-1]=="*"||lj_number1[lj_number1.length-1]=="-"||lj_number1[lj_number1.length-1]=="/"){
-			//替换掉最后一位
-			$(".content").text("错误");		
-			lj_number1="0";
-		}else{	
-			if(lj_number1[lj_number1.length-1]=="."){
-				//文本里存在点的情况  不变 不生效
-				return false;
-			}else{
-				lj_number1+=this.innerText;
-				$(".content").text(lj_number1);
-			}
-		}
-	})
-	
-	//百分比操作
-	$(".baifen").click(function(){
-		if(lj_number1[lj_number1.length-1]=="+"||lj_number1[lj_number1.length-1]=="*"||lj_number1[lj_number1.length-1]=="-"||lj_number1[lj_number1.length-1]=="/"){
-			//替换掉最后一位
-			$(".content").text("错误");
-			lj_number1="0";
-		}else{	
-			$(".content").text(lj_number1/100);
-			//lj_number1也跟着变化
-			lj_number1=lj_number1/100;
-		}
-	})
-	
-	//去位操作
-	$(".quwei").click(function(){
-		$(".content").text(lj_number1.substring(0,lj_number1.length-1));
-		lj_number1=lj_number1.substring(0,lj_number1.length-1);
-	})
-	
-	//等号操作
-	$(".denghao").click(function(){
-		var $jieguo=eval($(".content").text());
-		//数值进行计算
-		$(".content").text($jieguo);
-		//将lj_number进行更新
-//		console.log($jieguo);
-		lj_number1=$jieguo.toString();
-//		console.log(lj_number1)
-	})
-	
-	
-	//时针  让span透明度变化
-	setInterval(function(){
-		$("span").css("opacity",1);
-		setTimeout(function(){
-			$("span").css("opacity",0)
-		},900);
-	},1800)
+.box .gouge01 {
+	float: left;
+	width: 100px;
+	height: 500px;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	text-align: center;
+	line-height: 100px;
+	border-right: 1px solid #ccc;
+}
 
-	
-})
+.box .gouge01:nth-last-child(1) {
+	border: 0;
+}
+
+.box .gouge02 {
+	background-color: rgba(0, 0, 0, 0.1);
+	color: #5cc4ee;
+}
+
+.box .gouge01:nth-last-child(1) .gouge03 {
+	background-color: rgba(0, 0, 0, 0.1);
+	color: #5cc4ee;
+}
+
+.box .gouge01:nth-last-child(1) .gouge04 {
+	line-height: 200px;
+	background-color: lightskyblue;
+	color: white;
+}
+
+.gouge01 .gouge02,
+.gouge01 .gouge03 {
+	border-bottom: 1px solid #ccc;
+}
+
+.gouge01 .gouge03:nth-last-child(1) {
+	border-bottom: 0;
+}
+.content{
+	width: 400px;
+	height: 110px;
+	text-align: right;
+	line-height: 110px;
+	font-size: 40px;
+	padding: 0 27px 15px 0;
+	box-sizing: border-box;
+	overflow: hidden;
+}
+.gouge02,.gouge03,.gouge04{
+	cursor: pointer;
+}
+span{
+	position: absolute;
+	top: 26px;
+	right: 19px;
+	color: #1d9cf9;
+	font-weight: 100;
+	font-size: 40px;
+	opacity: 1;
+}
